[package]
name = "shared-models"
version = "0.1.11"
edition = "2021"
# description = "Shared models for microservices"
# license = "MIT"
# repository = "https://github.com/alexsong3/shared-models"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.5", features = ["macros", "uuid", "chrono", "postgres", "runtime-tokio-native-tls"] }
uuid = { version = "1.16.0", features = ["serde", "v4", "macro-diagnostics"] }